[gd_scene load_steps=5 format=3 uid="uid://d2n4g00qw1ua"]

[ext_resource type="Script" uid="uid://b3oswwsrguyar" path="res://tool/context_menu.gd" id="1_hqv6p"]
[ext_resource type="Texture2D" uid="uid://cohqeh37sychv" path="res://resources/icons/white/delete.png" id="1_t6t3t"]
[ext_resource type="Theme" uid="uid://dws6dqiic6wt" path="res://resources/default.tres" id="1_wmi5i"]
[ext_resource type="Texture2D" uid="uid://bi5sowqe2mcj3" path="res://resources/icons/white/formula.png" id="2_tp02x"]

[node name="ContextMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 191.0
offset_bottom = 86.0
theme = ExtResource("1_wmi5i")
theme_type_variation = &"CanvasPrompt"
script = ExtResource("1_hqv6p")
metadata/_custom_type_script = "uid://dn7rvihvbbxsq"

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
offset_left = 4.0
offset_top = 4.0
offset_right = 187.0
offset_bottom = 82.0
theme_type_variation = &"CanvasPrompt"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ItemsContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ResetHandles" type="Button" parent="PanelContainer/MarginContainer/ItemsContainer"]
visible = false
layout_mode = 2
text = "Reset
"

[node name="EditFormula" type="TextureButton" parent="PanelContainer/MarginContainer/ItemsContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
tooltip_text = "Edit formula"
texture_normal = ExtResource("2_tp02x")
ignore_texture_size = true
stretch_mode = 5

[node name="AutoRepair" type="Button" parent="PanelContainer/MarginContainer/ItemsContainer"]
visible = false
layout_mode = 2
text = "Repair"
flat = true

[node name="VSeparator" type="VSeparator" parent="PanelContainer/MarginContainer/ItemsContainer"]
layout_mode = 2

[node name="Delete" type="Button" parent="PanelContainer/MarginContainer/ItemsContainer"]
layout_mode = 2
tooltip_text = "Delete"
text = "Delete"
icon = ExtResource("1_t6t3t")
flat = true
alignment = 0
expand_icon = true

[connection signal="pressed" from="PanelContainer/MarginContainer/ItemsContainer/ResetHandles" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/ItemsContainer/EditFormula" to="." method="_on_formula_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/ItemsContainer/AutoRepair" to="." method="_on_auto_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/ItemsContainer/Delete" to="." method="_on_delete_button_pressed"]
